--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,26 @@
   color: #2c3e50;
   margin-top: 60px;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: gray;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+}
+
+#game-canvas {
+  border: 2px solid pink;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
